[bug]#4502 fix icon's nav bar alignement problem

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1621,6 +1621,7 @@ nav.horizontal{
 		margin-left: 5px;
 		margin-right: 5px;
 		box-sizing: border-box;
+	  	display: inline-block;
 	}
 	> a:hover{
 		border-bottom: 3px solid @accent;
