--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -8472,6 +8472,7 @@ nav.horizontal > a {
   margin-left: 5px;
   margin-right: 5px;
   box-sizing: border-box;
+  display: inline-block;
 }
 nav.horizontal > a:hover {
   border-bottom: 3px solid #ff8500;
